force-app/main/default/objects/Host__c/Host__c.object-meta.xml
<CustomObject>
    <label>Host</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Host Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hosts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>