force-app/main/default/objects/Host__c/fields/Host_Email__c.field-meta.xml
<CustomField>
    <fullName>Host_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Email</label>
    <type>Text</type>
</CustomField>