force-app/main/default/objects/Host__c/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <formula>TEXT(User__r.Host_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Location</label>
    <type>Text</type>
</CustomField>