force-app/main/default/objects/Host__c/fields/Host_Manager__c.field-meta.xml
<CustomField>
    <fullName>Host_Manager__c</fullName>
    <formula>User__r.Manager.FirstName + &apos;&apos; + User__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Manager</label>
    <type>Text</type>
</CustomField>