force-app/main/default/objects/Host__c/fields/Host_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Host_Market_Segment__c</fullName>
    <formula>TEXT(User__r.Host_Marketing_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Market Segment</label>
    <type>Text</type>
</CustomField>