force-app/main/default/objects/Host__c/fields/Host_Phone__c.field-meta.xml
<CustomField>
    <fullName>Host_Phone__c</fullName>
    <formula>User__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Phone</label>
    <type>Text</type>
</CustomField>