force-app/main/default/objects/Host__c/fields/Host_Role_Position__c.field-meta.xml
<CustomField>
    <fullName>Host_Role_Position__c</fullName>
    <formula>User__r.Host_Role_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Role/Position</label>
    <type>Text</type>
</CustomField>