force-app/main/default/objects/Host__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hosts</relationshipLabel>
    <relationshipName>Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>